
[TestFunctionTypes/simple_function - 1]
&dts_parser.FunctionType{
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 6-10,
    },
    span: 0-10,
}
---

[TestFunctionTypes/with_single_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 4-10,
            },
            span: 1-10,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 15-21,
    },
    span: 0-21,
}
---

[TestFunctionTypes/with_multiple_params - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 4-10,
            },
            span: 1-10,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 12-13,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 15-21,
            },
            span: 12-21,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 8,
        span: 26-33,
    },
    span: 0-33,
}
---

[TestFunctionTypes/with_optional_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 5-11,
            },
            Optional: true,
            span: 1-11,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 16-22,
    },
    span: 0-22,
}
---

[TestFunctionTypes/with_rest_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "args",
                span: 4-8,
            },
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 10-16,
                },
                span: 10-18,
            },
            Rest: true,
            span: 1-18,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 23-27,
    },
    span: 0-27,
}
---

[TestFunctionTypes/mixed_params - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 4-10,
            },
            span: 1-10,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 12-13,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 16-22,
            },
            Optional: true,
            span: 12-22,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "rest",
                span: 27-31,
            },
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    span: 33-36,
                },
                span: 33-38,
            },
            Rest: true,
            span: 24-38,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 43-47,
    },
    span: 0-47,
}
---

[TestFunctionTypes/return_function - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 4-10,
            },
            span: 1-10,
        },
    },
    ReturnType: &dts_parser.FunctionType{
        Params: []*dts_parser.Param{
            &dts_parser.Param{
                Name: &dts_parser.Ident{
                    Name: "y",
                    span: 16-17,
                },
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 19-25,
                },
                span: 16-25,
            },
        },
        ReturnType: &dts_parser.PrimitiveType{
            Kind: 8,
            span: 30-37,
        },
        span: 15-37,
    },
    span: 0-37,
}
---

[TestFunctionTypes/nested_in_union - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 0-6,
        },
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.FunctionType{
                Params: []*dts_parser.Param{
                    &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "x",
                            span: 11-12,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 14-20,
                        },
                        span: 11-20,
                    },
                },
                ReturnType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 25-31,
                },
                span: 10-31,
            },
            span: 9-32,
        },
    },
    span: 0-32,
}
---

[TestFunctionTypesWithTypeParams/single_type_param - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1-2,
            },
            span: 1-2,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 4-5,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 7-8,
                },
                span: 7-8,
            },
            span: 4-8,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 13-14,
        },
        span: 13-14,
    },
    span: 0-14,
}
---

[TestFunctionTypesWithTypeParams/multiple_type_params - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1-2,
            },
            span: 1-2,
        },
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "U",
                span: 4-5,
            },
            span: 4-5,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 7-8,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 10-11,
                },
                span: 10-11,
            },
            span: 7-11,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 13-14,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "U",
                    span: 16-17,
                },
                span: 16-17,
            },
            span: 13-17,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 22-23,
        },
        span: 22-23,
    },
    span: 0-23,
}
---

[TestFunctionTypesWithTypeParams/with_constraint - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1-2,
            },
            Constraint: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 11-17,
            },
            span: 1-17,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 19-20,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 22-23,
                },
                span: 22-23,
            },
            span: 19-23,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 28-29,
        },
        span: 28-29,
    },
    span: 0-29,
}
---

[TestFunctionTypesWithTypeParams/with_default - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1-2,
            },
            Default: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 5-11,
            },
            span: 1-11,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 13-14,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 16-17,
                },
                span: 16-17,
            },
            span: 13-17,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 22-23,
        },
        span: 22-23,
    },
    span: 0-23,
}
---

[TestFunctionTypesWithTypeParams/constraint_and_default - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1-2,
            },
            Constraint: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 11-17,
            },
            Default: &dts_parser.LiteralType{
                Literal: &dts_parser.StringLiteral{
                    Value: "hello",
                    span: 20-27,
                },
                span: 20-27,
            },
            span: 1-27,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 29-30,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 32-33,
                },
                span: 32-33,
            },
            span: 29-33,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 38-39,
        },
        span: 38-39,
    },
    span: 0-39,
}
---

[TestFunctionTypesWithTypeParams/multiple_with_constraints - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1-2,
            },
            Constraint: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 11-17,
            },
            span: 1-17,
        },
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "U",
                span: 19-20,
            },
            Constraint: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 29-35,
            },
            span: 19-35,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 37-38,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 40-41,
                },
                span: 40-41,
            },
            span: 37-41,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 43-44,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "U",
                    span: 46-47,
                },
                span: 46-47,
            },
            span: 43-47,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 52-53,
        },
        span: 52-53,
    },
    span: 0-53,
}
---

[TestConstructorTypes/simple_constructor - 1]
&dts_parser.ConstructorType{
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Object",
            span: 10-16,
        },
        span: 10-16,
    },
    span: 0-16,
}
---

[TestConstructorTypes/with_params - 1]
&dts_parser.ConstructorType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 5-6,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 8-14,
            },
            span: 5-14,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 16-17,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 19-25,
            },
            span: 16-25,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "MyClass",
            span: 30-37,
        },
        span: 30-37,
    },
    span: 0-37,
}
---

[TestConstructorTypes/with_type_params - 1]
&dts_parser.ConstructorType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 5-6,
            },
            span: 5-6,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 8-9,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 11-12,
                },
                span: 11-12,
            },
            span: 8-12,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "MyClass",
            span: 17-24,
        },
        TypeArgs: []dts_parser.TypeAnn{
            &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 25-26,
                },
                span: 25-26,
            },
        },
        span: 17-27,
    },
    span: 0-27,
}
---

[TestConstructorTypes/with_optional_param - 1]
&dts_parser.ConstructorType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 5-6,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 9-15,
            },
            Optional: true,
            span: 5-15,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "MyClass",
            span: 20-27,
        },
        span: 20-27,
    },
    span: 0-27,
}
---

[TestConstructorTypes/complex - 1]
&dts_parser.ConstructorType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 5-6,
            },
            Constraint: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Base",
                    span: 15-19,
                },
                span: 15-19,
            },
            span: 5-19,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 21-22,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 24-25,
                },
                span: 24-25,
            },
            span: 21-25,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 27-28,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 31-37,
            },
            Optional: true,
            span: 27-37,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Derived",
            span: 42-49,
        },
        TypeArgs: []dts_parser.TypeAnn{
            &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 50-51,
                },
                span: 50-51,
            },
        },
        span: 42-52,
    },
    span: 0-52,
}
---

[TestTypePredicates/simple_predicate - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                span: 4-7,
            },
            span: 1-7,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "x",
            span: 12-13,
        },
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 17-23,
        },
        span: 12-23,
    },
    span: 0-23,
}
---

[TestTypePredicates/with_type_param - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1-2,
            },
            span: 1-2,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 4-5,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 7-8,
                },
                span: 7-8,
            },
            span: 4-8,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "x",
            span: 13-14,
        },
        Type: &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "NonNullable",
                span: 18-29,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 30-31,
                    },
                    span: 30-31,
                },
            },
            span: 18-32,
        },
        span: 13-32,
    },
    span: 0-32,
}
---

[TestTypePredicates/asserts_only - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                span: 4-7,
            },
            span: 1-7,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "x",
            span: 20-21,
        },
        Asserts: true,
        span: 12-21,
    },
    span: 0-21,
}
---

[TestTypePredicates/asserts_with_type - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                span: 4-7,
            },
            span: 1-7,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "x",
            span: 20-21,
        },
        Asserts: true,
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 25-31,
        },
        span: 12-31,
    },
    span: 0-31,
}
---

[TestTypePredicates/complex_type - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "value",
                span: 1-6,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 1,
                span: 8-15,
            },
            span: 1-15,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "value",
            span: 20-25,
        },
        Type: &dts_parser.UnionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 29-35,
                },
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 38-44,
                },
            },
            span: 29-44,
        },
        span: 20-44,
    },
    span: 0-44,
}
---

[TestParenthesizedVsFunctionType/parenthesized_type - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 1-7,
    },
    span: 0-8,
}
---

[TestParenthesizedVsFunctionType/parenthesized_union - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.UnionType{
        Types: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            &dts_parser.PrimitiveType{
                Kind: 7,
                span: 10-16,
            },
        },
        span: 1-16,
    },
    span: 0-17,
}
---

[TestParenthesizedVsFunctionType/function_no_params - 1]
&dts_parser.FunctionType{
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 6-10,
    },
    span: 0-10,
}
---

[TestParenthesizedVsFunctionType/function_one_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 4-10,
            },
            span: 1-10,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 15-19,
    },
    span: 0-19,
}
---

[TestParenthesizedVsFunctionType/nested_paren - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.ParenthesizedType{
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 2-8,
        },
        span: 1-9,
    },
    span: 0-10,
}
---

[TestParenthesizedVsFunctionType/function_returning_function - 1]
&dts_parser.FunctionType{
    ReturnType: &dts_parser.FunctionType{
        ReturnType: &dts_parser.PrimitiveType{
            Kind: 2,
            span: 12-16,
        },
        span: 6-16,
    },
    span: 0-16,
}
---

[TestTypeKeywordsAsIdentifiers/string_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "string",
                span: 1-7,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 9-15,
            },
            span: 1-15,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 7,
        span: 20-26,
    },
    span: 0-26,
}
---

[TestTypeKeywordsAsIdentifiers/number_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "number",
                span: 1-7,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 9-15,
            },
            span: 1-15,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 20-26,
    },
    span: 0-26,
}
---

[TestTypeKeywordsAsIdentifiers/boolean_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "boolean",
                span: 1-8,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 10-17,
            },
            span: 1-17,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 22-26,
    },
    span: 0-26,
}
---

[TestTypeKeywordsAsIdentifiers/multiple_type_keywords - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "string",
                span: 1-7,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 9-15,
            },
            span: 1-15,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "number",
                span: 17-23,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 25-31,
            },
            span: 17-31,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "boolean",
                span: 33-40,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 42-49,
            },
            span: 33-49,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 54-58,
    },
    span: 0-58,
}
---

[TestTypeKeywordsAsIdentifiers/mixed_with_regular - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "value",
                span: 1-6,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 8-14,
            },
            span: 1-14,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "number",
                span: 16-22,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 24-30,
            },
            span: 16-30,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 8,
        span: 35-42,
    },
    span: 0-42,
}
---

[TestTypeKeywordsAsIdentifiers/type_predicate_with_type_keyword - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "string",
                span: 1-7,
            },
            Type: &dts_parser.PrimitiveType{
                span: 9-12,
            },
            span: 1-12,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "string",
            span: 17-23,
        },
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 27-33,
        },
        span: 17-33,
    },
    span: 0-33,
}
---

[TestTypeKeywordsAsIdentifiers/asserts_with_type_keyword - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "number",
                span: 1-7,
            },
            Type: &dts_parser.PrimitiveType{
                span: 9-12,
            },
            span: 1-12,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "number",
            span: 25-31,
        },
        Asserts: true,
        span: 17-31,
    },
    span: 0-31,
}
---

[TestTypeKeywordsAsIdentifiers/asserts_with_type_and_keyword - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "boolean",
                span: 1-8,
            },
            Type: &dts_parser.PrimitiveType{
                span: 10-13,
            },
            span: 1-13,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "boolean",
            span: 26-33,
        },
        Asserts: true,
        Type: &dts_parser.PrimitiveType{
            Kind: 8,
            span: 37-44,
        },
        span: 18-44,
    },
    span: 0-44,
}
---

[TestTypeKeywordsAsIdentifiers/bigint_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "bigint",
                span: 1-7,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 9,
                span: 9-15,
            },
            span: 1-15,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 20-26,
    },
    span: 0-26,
}
---

[TestTypePredicates/this_is_predicate - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                span: 4-7,
            },
            span: 1-7,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "this",
            span: 12-16,
        },
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 20-26,
        },
        span: 12-26,
    },
    span: 0-26,
}
---

[TestTypePredicates/this_is_readonly_array - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "S",
                span: 1-2,
            },
            Constraint: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 11-12,
                },
                span: 11-12,
            },
            span: 1-12,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "predicate",
                span: 14-23,
            },
            Type: &dts_parser.FunctionType{
                Params: []*dts_parser.Param{
                    &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 26-31,
                        },
                        Type: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 33-34,
                            },
                            span: 33-34,
                        },
                        span: 26-34,
                    },
                },
                ReturnType: &dts_parser.TypePredicate{
                    ParamName: &dts_parser.Ident{
                        Name: "value",
                        span: 39-44,
                    },
                    Type: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "S",
                            span: 48-49,
                        },
                        span: 48-49,
                    },
                    span: 39-49,
                },
                span: 25-49,
            },
            span: 14-49,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "this",
            span: 54-58,
        },
        Type: &dts_parser.ArrayType{
            ElementType: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "S",
                    span: 71-72,
                },
                span: 71-72,
            },
            Readonly: true,
            span: 62-74,
        },
        span: 54-74,
    },
    span: 0-74,
}
---

[TestMethodSignatureWithTypePredicate/lib.es5.d.ts_line_1242_-_every_method - 1]
&dts_parser.ObjectType{
    Members: []dts_parser.InterfaceMember{
        &dts_parser.MethodSignature{
            Name: &dts_parser.Ident{
                Name: "every",
                span: 2-7,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "S",
                        span: 8-9,
                    },
                    Constraint: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 18-19,
                        },
                        span: 18-19,
                    },
                    span: 8-19,
                },
            },
            Params: []*dts_parser.Param{
                &dts_parser.Param{
                    Name: &dts_parser.Ident{
                        Name: "predicate",
                        span: 21-30,
                    },
                    Type: &dts_parser.FunctionType{
                        Params: []*dts_parser.Param{
                            &dts_parser.Param{
                                Name: &dts_parser.Ident{
                                    Name: "value",
                                    span: 33-38,
                                },
                                Type: &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "T",
                                        span: 40-41,
                                    },
                                    span: 40-41,
                                },
                                span: 33-41,
                            },
                            &dts_parser.Param{
                                Name: &dts_parser.Ident{
                                    Name: "index",
                                    span: 43-48,
                                },
                                Type: &dts_parser.PrimitiveType{
                                    Kind: 7,
                                    span: 50-56,
                                },
                                span: 43-56,
                            },
                            &dts_parser.Param{
                                Name: &dts_parser.Ident{
                                    Name: "array",
                                    span: 58-63,
                                },
                                Type: &dts_parser.ArrayType{
                                    ElementType: &dts_parser.TypeReference{
                                        Name: &dts_parser.Ident{
                                            Name: "T",
                                            span: 74-75,
                                        },
                                        span: 74-75,
                                    },
                                    Readonly: true,
                                    span: 65-77,
                                },
                                span: 58-77,
                            },
                        },
                        ReturnType: &dts_parser.TypePredicate{
                            ParamName: &dts_parser.Ident{
                                Name: "value",
                                span: 82-87,
                            },
                            Type: &dts_parser.TypeReference{
                                Name: &dts_parser.Ident{
                                    Name: "S",
                                    span: 91-92,
                                },
                                span: 91-92,
                            },
                            span: 82-92,
                        },
                        span: 32-92,
                    },
                    span: 21-92,
                },
                &dts_parser.Param{
                    Name: &dts_parser.Ident{
                        Name: "thisArg",
                        span: 94-101,
                    },
                    Type: &dts_parser.PrimitiveType{
                        span: 104-107,
                    },
                    Optional: true,
                    span: 94-107,
                },
            },
            ReturnType: &dts_parser.TypePredicate{
                ParamName: &dts_parser.Ident{
                    Name: "this",
                    span: 110-114,
                },
                Type: &dts_parser.ArrayType{
                    ElementType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "S",
                            span: 127-128,
                        },
                        span: 127-128,
                    },
                    Readonly: true,
                    span: 118-130,
                },
                span: 110-130,
            },
            span: 2-130,
        },
    },
    span: 0-132,
}
---

[TestMethodSignatureWithTypePredicate/simple_method_with_type_predicate - 1]
&dts_parser.ObjectType{
    Members: []dts_parser.InterfaceMember{
        &dts_parser.MethodSignature{
            Name: &dts_parser.Ident{
                Name: "isString",
                span: 2-10,
            },
            Params: []*dts_parser.Param{
                &dts_parser.Param{
                    Name: &dts_parser.Ident{
                        Name: "x",
                        span: 11-12,
                    },
                    Type: &dts_parser.PrimitiveType{
                        span: 14-17,
                    },
                    span: 11-17,
                },
            },
            ReturnType: &dts_parser.TypePredicate{
                ParamName: &dts_parser.Ident{
                    Name: "x",
                    span: 20-21,
                },
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 25-31,
                },
                span: 20-31,
            },
            span: 2-31,
        },
    },
    span: 0-33,
}
---

[TestMethodSignatureWithTypePredicate/method_with_this_predicate - 1]
&dts_parser.ObjectType{
    Members: []dts_parser.InterfaceMember{
        &dts_parser.MethodSignature{
            Name: &dts_parser.Ident{
                Name: "check",
                span: 2-7,
            },
            ReturnType: &dts_parser.TypePredicate{
                ParamName: &dts_parser.Ident{
                    Name: "this",
                    span: 11-15,
                },
                Type: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "NonNullable",
                        span: 19-30,
                    },
                    TypeArgs: []dts_parser.TypeAnn{
                        &dts_parser.ThisType{
                            span: 31-35,
                        },
                    },
                    span: 19-36,
                },
                span: 11-36,
            },
            span: 2-36,
        },
    },
    span: 0-38,
}
---

[TestConstructorTypes/abstract_constructor - 1]
&dts_parser.ConstructorType{
    Abstract: true,
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Object",
            span: 19-25,
        },
        span: 19-25,
    },
    span: 0-25,
}
---

[TestConstructorTypes/abstract_with_params - 1]
&dts_parser.ConstructorType{
    Abstract: true,
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "args",
                span: 17-21,
            },
            Type: &dts_parser.PrimitiveType{
                span: 23-26,
            },
            Rest: true,
            span: 14-26,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        span: 31-34,
    },
    span: 0-34,
}
---

[TestConstructorTypes/abstract_with_type_params - 1]
&dts_parser.ConstructorType{
    Abstract: true,
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 14-15,
            },
            span: 14-15,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "args",
                span: 20-24,
            },
            Type: &dts_parser.PrimitiveType{
                span: 26-29,
            },
            Rest: true,
            span: 17-29,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 34-35,
        },
        span: 34-35,
    },
    span: 0-35,
}
---
